# strava-mcp

./: .env.example  .gitignore  API.md  CLAUDE.md  CONTEXT.md  PLAN.md  PRD.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/adr/: 0001-pure-reader-mcp-unified-backfill.md  0002-lean-columns-plus-detail-json.md  0003-insert-only-with-lookback.md
specs/001-strava-mcp-mirror/: data-model.md  plan.md  quickstart-results.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-remove-comments-kudos/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-hide-empty-stream-charts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-unify-auth-token-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
strava-api-spec/: strava-openapi-v3.bundled.json
strava-api-spec/swagger/: activity.json  activity_stats.json  athlete.json  club.json  comment.json  fault.json  gear.json  lap.json  route.json  segment.json  segment_effort.json  stream.json  swagger.json  upload.json  zones.json
strava_mcp/: __init__.py  __main__.py  config.py  logging.py
tests/: conftest.py
(+103 files in other folders)
