[project]
name = "strava-mcp"
version = "0.1.0"
description = "Locally-run MCP server that mirrors one athlete's Strava data and serves it as pure database reads."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.scripts]
strava-mcp = "strava_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strava_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["strava_mcp", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastMCP/typer-style defaults in signatures are intentional

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["strava_mcp"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["fastmcp.*"]
ignore_missing_imports = true

# The MCP tool wrappers are decorated by FastMCP's untyped `@mcp.tool`; their
# bodies just delegate to fully-typed pure-reader functions.
[[tool.mypy.overrides]]
module = ["strava_mcp.mcp.server"]
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
